<!--
  ~ Copyright (C) 2017 Mateusz Utkała
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Polish Identifiers Utils demo</string>
    <string name="number_edit_text_hint">Number to check</string>
    <string name="validate_button_text">Validate</string>
    <string name="pesel" translatable="false">PESEL</string>
    <string name="nip" translatable="false">NIP</string>
    <string name="regon" translatable="false">REGON</string>
    <string name="invalid_pesel_text">Invalid PESEL</string>
    <string name="invalid_nip_text">Invalid NIP</string>
    <string name="valid_text">Number valid</string>
    <string name="invalid_regon_text">Invalid REGON, %s</string>
</resources>
