<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Mateusz Utkała
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.utkala.polishidentifiersutilsdemo.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/number_edit_text_hint"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/numberTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin">

        <RadioButton
            android:id="@+id/peselType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pesel" />

        <RadioButton
            android:id="@+id/nipType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nip" />

        <RadioButton
            android:id="@+id/regonType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regon" />
    </RadioGroup>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/validate_button_text" />

    <TextView
        android:id="@+id/validationResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin" />
</LinearLayout>
